# Mars-Simulation-Colony-Sim-C-

./: CMakeLists.txt  Get-MarsExe.cmd  Get-MarsExe.ps1  Launch-MarsColony.ps1  Program.cs  README.md  Run Mars Colony.bat  fixed_point.h  mars_colony.cpp
.github/workflows/: build.yml  ci.yml  determinism.yml  release-windows.yml
engine/: events.cpp  events.hpp  loop.hpp  persist.cpp  persist.hpp  power.cpp  power.hpp  rng.hpp  state.hpp  step.cpp  step.hpp  time.hpp
include/mars/: timing.hpp
src/: effects.cpp  effects.hpp  fixed_clock.h  main.cpp  rng.h
src/app/: main.cpp
src/core/: command.hpp  sim.cpp  sim.hpp  specs.hpp  state.hpp  types.hpp
src/determinism/: state_hash.hpp
src/sim/: Recorder.cpp  Recorder.h  Rng.h  SimClock.h  Simulation.cpp  Simulation.h  World.cpp  World.h
src/systems/: power_system.cpp  power_system.h
tests/: determinism.cpp  expected_hash.txt
ui/cli/: app.cpp  app.hpp  cli.cpp  cli.h  main.cpp
